<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lessgrey"
    android:clickable="true"
    android:focusable="true"
    tools:context=".ui.onboarding.Onboarding_userdetails">
    

   
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/agetext"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxBackgroundColor="@color/yellow"
        android:hint="@string/age"
        app:helperTextEnabled="true"
        app:helperText="This helps us to be more accurate by 10%"
        app:helperTextTextColor="@color/colorPrimaryDark"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/agetextanswer"
            android:maxLength="3"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bmitext"
        android:layout_marginTop="220dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxBackgroundColor="@color/yellow"
        android:hint="@string/bmi"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/bmitextanswer"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationtext"
        android:layout_marginTop="305dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxBackgroundColor="@color/yellow"
        android:hint="@string/location"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/locationtextanswer"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/genderselect"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:singleSelection="true"
        android:contentDescription="@string/gender_selection">


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/AppButton3"
            android:id="@+id/buttonmale"
            android:text="@string/gender_male" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/AppButton3"
            android:id="@+id/buttonfemale"
            android:text="@string/gender_female" />
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/AppButton3"
            android:id="@+id/buttonother"
            android:text="@string/gender_other" />
    </com.google.android.material.button.MaterialButtonToggleGroup>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppButton2"
        android:backgroundTint="@color/blue"
        android:text="@string/next"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="440dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppButton2"
        android:backgroundTint="@color/blue"
        android:text="@string/skip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="490dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="35dp"
        android:text="@string/smartness_meter"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progress="0"
        android:layout_gravity="bottom"
        android:scaleY="1.5"
        android:layout_marginBottom="10dp"
        android:progressDrawable="@drawable/progress_background"
        />



</FrameLayout>