<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lessgrey"
    tools:context=".ui.FirstUse.FirstUse_Goals">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/goals_primordial"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="50dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goals_recycler"
        android:layout_marginTop="140dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        tools:listitem="@layout/fragment_goals_item"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/getstarted"
        android:text="@string/getstarted"
        style="@style/AppButton4"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skipgoals"
        android:text="@string/skip"
        style="@style/AppButton4"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"/>

</FrameLayout>