<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.Onboarding_userselfie"
    android:background="@color/lessgrey">

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        style="@style/AppButton2"
        android:backgroundTint="@color/blue"
        android:text="@string/skip" />

    <TextView
        android:id="@+id/userwelcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userwelcome"
        android:textColor="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="180dp"
        android:textSize="20sp"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/selfie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/yellow"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:layout_gravity="center"/>

</FrameLayout>