<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.example.start.ui.onboarding.Onboarding4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lessgrey"
    tools:context=".ui.onboarding.Onboarding_medicaldetails"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/fragment_onboarding4"
        android:id="@+id/list"/>

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginEnd="100dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="55dp"
        style="@style/AppButton2"
        android:backgroundTint="@color/blue"/>

    <Button
        android:id="@+id/skipbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="55dp"
        android:layout_marginStart="100dp"
        style="@style/AppButton2"
        android:backgroundTint="@color/blue"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="35dp"
        android:text="@string/smartness_meter"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:progress="50"
        android:layout_gravity="bottom"
        android:scaleY="1.5"
        android:layout_marginBottom="10dp"
        android:progressDrawable="@drawable/progress_background"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>